@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.3.4
 ------------------------
+ o rename beast feature when name conflict with reserve keywords (label, branch, etc) <2015-11-27, Fri>
  o get_clade_position function <2015-11-26, Thu>
    + https://github.com/GuangchuangYu/ggtree/issues/28
  o get_heatmap_column_position function <2015-11-25, Wed>
